--- a/Database_twitter/package.json
+++ b/Database_twitter/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node app.js",
+    "production:build": "npx prisma generate && npx prisma migrate deploy"
   }
 }
