--- a/Database_twitter/package.json
+++ b/Database_twitter/package.json
@@ -10,6 +10,6 @@
   },
   "scripts": {
     "dev": "node app.js",
-    "production:build": "npx prisma generate && npx prisma migrate deploy"
+    "build": "npx prisma generate && npx prisma migrate deploy"
   }
 }
